    - Fix a memory leak when using old attribute names.
    - Map ArchiveURI property to archive_uri
  * debian/control:
    - Change priority to standard, keep -doc and -dev on optional.
  * utils/migrate-0.8.py:
    - Open files in universal newline support and pass filename to ast.parse.
    - Add has_key to the list of deprecated functions.
    - Don't abort if parsing failed.

  [ Michael Vogt ]
  * apt/cache.py:
    - make cache open silent by default (use apt.progress.base.OpProgress)
  * tests/data/aptsources_ports/sources.list:
    - fix ports test-data
  * tests/test_apt_cache.py:
    - add simple test for basic cache/dependency iteration

 -- Julian Andres Klode <jak@debian.org>  Mon, 15 Mar 2010 17:04:49 +0100

python-apt (0.7.94.2) unstable; urgency=low

  * Revert 0.7.93.3 and just set APT::Architecture to i386 for
    test_aptsources; fixes FTBFS on powerpc.

 -- Julian Andres Klode <jak@debian.org>  Fri, 12 Mar 2010 19:22:57 +0100

python-apt (0.7.94.1) unstable; urgency=low

  * Pass --exclude=migrate-0.8.py to dh_pycentral; in order to not depend
    on python2.6; but recommend python2.6.
  * Use dh_link instead of ln for python-apt-doc (Closes: #573523).
  * Pass --link-doc=python-apt to dh_installdocs.
  * Install examples to python-apt-doc instead of python-apt.
  * tests/test_all.py: Write information header to stderr, not stdout.
  * Build documentation only when needed (when building python-apt-doc).

 -- Julian Andres Klode <jak@debian.org>  Fri, 12 Mar 2010 14:36:48 +0100

python-apt (0.7.94) unstable; urgency=low

  * Move documentation into python-apt-doc (Closes: #572617)
  * Build documentation only once on the default Python version.
  * python/acquire-item.cc:
    - Add AcquireItem.partialsize member.
  * python/apt_pkgmodule.cc:
    - Treat '>>' and '>', '<<' and '<' as identical in check_dep (LP: #535667).
  * python/generic.cc:
    - Map UntranslatedDepType to dep_type_untranslated.
  * python/tag.cc: