@@ -10,6 +10,8 @@ python-apt (0.7.94.3) UNRELEASED; urgency=low
     - Open files in universal newline support and pass filename to ast.parse.
     - Add has_key to the list of deprecated functions.
     - Don't abort if parsing failed.
+    - do not require files to end in .py if they are passed on the command
+      line or if they contain python somewhere in the shebang line.
 
   [ Michael Vogt ]
   * apt/cache.py:
